samples/_failures_safe/1761496277_80051a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d565eba9.c:154:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 | void parser_init
      | ^~~~
